--- a/DELISH/style.css
+++ b/DELISH/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800&display=swap');
+
+body {
+  font-family: 'Jost' !important;
+}
+
 /* hero section css start */
 .hero-chef {
   position: relative;
